@@ -1,3 +1,12 @@
+2016-07-19  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2016-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/71758
+	* c-c++-common/gomp/pr71758.c: New test.
+	* gfortran.dg/gomp/pr71758.f90: New test.
+
 2016-07-15  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	Backport from trunk:
