@@ -1,3 +1,11 @@
+2016-07-19  Jakub Jelinek  <jakub@redhat.com>
+
+	Backported from mainline
+	2016-07-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/71758
+	* omp-low.c (expand_omp_target): Gimplify device.
+
 2016-07-18  Martin Liska  <mliska@suse.cz>
 
 	Backported from mainline
